feat: Implement Organic Workflow Board redesign (Mind Map, Work Wizard, Hierarchical List)

--- a/backend/tasks.json
+++ b/backend/tasks.json
@@ -14,6 +14,22 @@
       "dueDate": "2026-02-28",
       "createdAt": "2026-01-18T14:20:17.976Z",
       "updatedAt": "2026-01-18T14:20:17.976Z"
+    },
+    {
+      "id": "local-1768748010465",
+      "title": "Test 1",
+      "description": "test3",
+      "status": "In Progress",
+      "tags": [
+        "practice",
+        "content",
+        "newsletter",
+        "stone",
+        "substack"
+      ],
+      "dueDate": "2026-02-27",
+      "createdAt": "2026-01-18T14:53:30.465Z",
+      "updatedAt": "2026-01-18T14:53:30.465Z"
     }
   ],
   "tags": [
