--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@react-oauth/google": "^0.13.4",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.6.0",
     "dagre": "^0.8.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.11.4"
